--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,19 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
     <title>Pedro Silva</title>
   </head>
   <body>
 
        <h1>{{ page.title }}</h1>
        <h2>{{ page.abstract }}</h2>
+
+<div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'>
+  <div class="grid-item"></div>
+  <div class="grid-item"></div>
+  ...
+</div>
  
   </body>
 </html>
