--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,12 @@
 <html>
   <head>
     <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
+    <script type="text/javascript">
+// init with selector
+var msnry = new Masonry( '.grid', {
+  // options...
+});
+    </script>
     <title>Pedro Silva</title>
   </head>
   <body>
