--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,6 @@
 <html>
   <head>
     <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
-    <script type="text/javascript">
-// init with selector
-var msnry = new Masonry( '.grid', {
-  // options...
-});
-    </script>
     <title>Pedro Silva</title>
   </head>
   <body>
@@ -18,9 +12,12 @@ var msnry = new Masonry( '.grid', {
        <h2>{{ page.abstract }}</h2>
 
 <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'>
-  <div class="grid-item"></div>
-  <div class="grid-item"></div>
-  ...
+  <div class="grid-item">uno</div>
+  <div class="grid-item">dos</div>
+  <div class="grid-item">uno</div>
+  <div class="grid-item">dos</div>
+  <div class="grid-item">uno</div>
+  <div class="grid-item">dos</div>
 </div>
  
   </body>
