--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
+    <link src="test.css"></link>
     <title>Pedro Silva</title>
   </head>
   <body>
