--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,22 +3,30 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Fondamento|Nothing+You+Could+Do|Tangerine" rel="stylesheet"> 
     <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
     <link href="test.css" type="text/css" rel="stylesheet">
     <title>Pedro Silva</title>
+   <style>
+      body {
+/*      font-family: 'Fondamento', cursive; */
+        font-family: 'Tangerine', serif;
+/*      font-family: 'Fondamento', cursive; */
+        font-size: 48px;
+      }
+    </style>
   </head>
   <body>
 
        <h1>{{ page.title }}</h1>
        <h2>{{ page.abstract }}</h2>
 
-<div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'>
-  <div class="grid-item">uno</div>
-  <div class="grid-item">dos</div>
-  <div class="grid-item">uno</div>
-  <div class="grid-item">dos</div>
-  <div class="grid-item">uno</div>
-  <div class="grid-item">dos</div>
+<div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 100 }'>
+ {% for cada in page.temas %}
+  <div class="grid-item">
+       {{ cada }}
+  </div>
+ {% endfor %}
 </div>
  
   </body>
