--- a/test.css
+++ b/test.css
@@ -1,4 +1,13 @@
-.grid-item: {
-border:1px solid black;
-height: 200px;
+body {
+    font-family: 'Fondamento', cursive; 
+/*    font-family: 'Tangerine', cursive; */
+/*    font-family: 'Nothing You Could Do', cursive; */
+}
+
+.grid-item{
+    border: 1px solid black;
+    border-radius: 25px;
+    padding:20px;
+    background: #73AD21;
+    word-wrap: break-word;
 }
