correcciones de tildes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,14 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Fondamento|Nothing+You+Could+Do|Tangerine" rel="stylesheet"> 
     <script src="https://unpkg.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
-    <link href="test.css" type="text/css" rel="stylesheet">
-    <title>Pedro Silva</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <title>{{ page.title }}</title>
    <style>
       body {
 /*      font-family: 'Fondamento', cursive; */
         font-family: 'Tangerine', serif;
 /*      font-family: 'Fondamento', cursive; */
-        font-size: 48px;
+        font-size: 24px;
       }
     </style>
   </head>
