--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    text-align: center;
     font-family: 'Fondamento', cursive; 
 /*    font-family: 'Tangerine', cursive; */
 /*    font-family: 'Nothing You Could Do', cursive; */
